Bug 74493 - DATALOSS: Calc change data entered in certain cells
Summary: DATALOSS: Calc change data entered in certain cells
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.5.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: highest blocker
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: NoRepro:4.2.0.4:OSX target:4.1.5
Keywords:
: 74527 74601 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2014-02-04 08:26 UTC by Jean-Baptiste Faure
Modified: 2014-02-06 09:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
file saved by LO 4.1.5.2 (8.09 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-02-04 11:31 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2014-02-04 08:26:44 UTC
Bug discovered on LibreOffice 4.1.5.2

Steps to reproduce:
1/ open a new spreadsheet
2/ in A1 enter aaa, in B1 enter bbb
3/ save the file
4/ reload the file
5/ in A5 enter zzz
6/ save the file
7/ reload the file : you find bbb in A5
8 in C1 enter ccc and save the file
9 reload the file : you find ccc in C1 and in A5

Expected behavior: Calc keeps the entered data. ;-)

Best regard. JBF
Comment 1 retired 2014-02-04 09:17:24 UTC
NoRepro:4.2.0.4:OSX
Comment 2 sophie 2014-02-04 09:33:45 UTC
Confirmed by the FR QA team - set as New - Sophie
Comment 3 Jean-Baptiste Faure 2014-02-04 09:51:23 UTC
(In reply to comment #1)
> NoRepro:4.2.0.4:OSX

Yes, it concerns 4.1.5 only.

Best regards. JBF
Comment 4 Jean-Baptiste Faure 2014-02-04 11:31:17 UTC
Created attachment 93359 [details]
file saved by LO 4.1.5.2

Open this file with LO 4.1.5.2 you get bbb in A5.
Look at its content.xml : there is zzz in A5

Same problem if I open this file with LO 4.2.1.0.0+

Best regards. JBF
Comment 5 Eike Rathke (retired, only occasionally showing up) 2014-02-04 11:46:21 UTC
Taking.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2014-02-04 12:26:46 UTC
Pending review
for 4-1 at https://gerrit.libreoffice.org/7843
for 4-1-5 at https://gerrit.libreoffice.org/7844
Comment 7 Commit Notification 2014-02-04 12:32:33 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7309663f1c4dcc665e966c3a77cfa687bcc354c2&h=libreoffice-4-1

resolved fdo#74493 do not trust aCell.maBaseCell


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-04 12:36:33 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9cb9d32c7a64bf5789eabe47d901237d78b44a4d&h=libreoffice-4-1-5

resolved fdo#74493 do not trust aCell.maBaseCell


It will be available already in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Jean-Baptiste Faure 2014-02-04 19:48:34 UTC
Verified in 4.1.5.2.0+ (Build ID: 9cb9d32c7a64bf5789eabe47d901237d78b44a4)

Thank you very much for the quick fix.

Best regards. JBF
Comment 10 Jean-Baptiste Faure 2014-02-05 05:26:35 UTC
*** Bug 74527 has been marked as a duplicate of this bug. ***
Comment 11 sophie 2014-02-06 09:57:53 UTC
*** Bug 74601 has been marked as a duplicate of this bug. ***