resolved fdo#74493 do not trust aCell.maBaseCell

Regression introduced with 70c61a549184cf8611f7890ac31b0ba4c460cdec on
4-1 and 68a753b6a36560eb83ba6ebe4fe9897a8759d265 on 4-1-5

Apparently aCell.maBaseCell does not always follow the current cell
position, so do not trust it. Always explicitly obtain the correct cell.

Change-Id: Ib88de44a326be75c13d37538b8ae56d265b60ee5